--- a/package.json
+++ b/package.json
@@ -3,9 +3,20 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@types/react-datepicker": "^3.1.1",
+    "bootstrap": "^4.5.3",
+    "classnames": "^2.2.6",
+    "moment": "^2.29.1",
+    "primeflex": "2.0.0",
+    "primeicons": "4.0.0",
+    "primereact": "^5.0.1",
     "react": "^17.0.1",
+    "react-bootstrap": "^1.4.0",
+    "react-datepicker": "^3.3.0",
+    "react-dialog": "^1.0.2",
     "react-dom": "^17.0.1",
     "react-scripts": "4.0.0",
+    "react-transition-group": "^1.2.1",
     "typescript": "^4.0.3",
     "uuid": "^8.3.1"
   },
